--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 24px;
+  gap: 48px;
 }
 
 .result {
@@ -226,6 +226,62 @@ body {
 .settings-toggle {
   margin-top: 10px;
 }
+
+
+
+
+.confirmation-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  width: 80%;
+  max-width: 400px;
+  text-align: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.btn.confirm {
+  background-color: var(--correct-color);
+  color: var(--text-color);
+}
+
+.btn.cancel {
+  background-color: var(--wrong-color);
+  color: var(--text-color);
+}
+
+.btn.confirm, .btn.cancel {
+  margin: 10px;
+  padding: 12px 20px;
+}
+
+.modal-content p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+
+
+hr {
+  align-self: flex-start; /* Align to the start of the cross axis (horizontal in this case) */
+  width: 100%; 
+  color: #f4f4f4;
+  margin: auto;
+}
+
 
 /* Mobile styles */
 @media only screen and (max-width: 768px) {
