--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@
   --exact-color: #FFA500;
 }
 
+* {
+  touch-action: manipulation;
+}
+
 body {
   font-family: 'Arial', sans-serif;
   display: flex;
