--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,18 @@
-* {
-  touch-action: none !important;
+html,
+body {
+  touch-action: manipulation !important;
 }
 
 :root {
-  --correct-color: #4CAF50;
-  --wrong-color: #FF5722;
-  --reset-color: #3F51B5;
+  --correct-color: #4caf50;
+  --wrong-color: #ff5722;
+  --reset-color: #3f51b5;
   --text-color: white;
-  --exact-color: #FFA500;
+  --exact-color: #ffa500;
 }
 
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -147,12 +148,12 @@ body {
   border: 1px solid #ccc;
 }
 
-.custom-checkbox:hover input~.checkmark {
+.custom-checkbox:hover input ~ .checkmark {
   background-color: #f5f5f5;
 }
 
-.custom-checkbox input:checked~.checkmark {
-  background-color: #2196F3;
+.custom-checkbox input:checked ~ .checkmark {
+  background-color: #2196f3;
 }
 
 .checkmark:after {
@@ -161,7 +162,7 @@ body {
   display: none;
 }
 
-.custom-checkbox input:checked~.checkmark:after {
+.custom-checkbox input:checked ~ .checkmark:after {
   display: block;
 }
 
@@ -199,7 +200,7 @@ body {
 }
 
 .manual-toggle {
-  background-color: #2196F3;
+  background-color: #2196f3;
   color: white;
   padding: 10px 15px;
   cursor: pointer;
@@ -218,7 +219,6 @@ body {
   gap: 24px;
 }
 
-
 .manual-content {
   max-height: 0;
   overflow: hidden;
@@ -230,9 +230,6 @@ body {
 .settings-toggle {
   margin-top: 10px;
 }
-
-
-
 
 .confirmation-modal {
   display: none;
@@ -267,7 +264,8 @@ body {
   color: var(--text-color);
 }
 
-.btn.confirm, .btn.cancel {
+.btn.confirm,
+.btn.cancel {
   margin: 10px;
   padding: 12px 20px;
 }
@@ -277,15 +275,12 @@ body {
   margin-bottom: 20px;
 }
 
-
-
 hr {
   align-self: flex-start; /* Align to the start of the cross axis (horizontal in this case) */
-  width: 100%; 
+  width: 100%;
   color: #f4f4f4;
   margin: auto;
 }
-
 
 /* Mobile styles */
 @media only screen and (max-width: 768px) {
