--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,11 @@ body {
   --reset-color: #3f51b5;
   --text-color: white;
   --exact-color: #ffa500;
+  --nitro-color: #ff73fa;
+  --nitro-color-dark: #cc5bad;
+  --dark-color-1: #1e2125;
+  --dark-color-2: #23272a;
+  --dark-color-3: #2e3136;
 }
 
 body {
@@ -37,6 +42,11 @@ body {
   display: flex;
   flex-direction: column;
   gap: 12px;
+}
+.settings-content-container .expanded {
+  padding: 0px 48px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
 }
 
 .btn {
@@ -223,7 +233,7 @@ body {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
-  background-color: #f5f5f5;
+  background-color: #f9f9f9;
   padding: 0 20px;
 }
 
@@ -287,6 +297,92 @@ hr {
   flex-direction: row;
   scale: 0.8;
   justify-content: center;
+}
+
+/* Dark mode. */
+/* Discord-style Dark Mode */
+body.dark-mode {
+  background-color: var(--dark-color-1);
+  color: #ffffff;
+}
+
+.dark-mode .btn {
+  background-color: var(--dark-color-3);
+  color: #ffffff;
+}
+
+.settings-content-container .expanded {
+  padding: 0px 48px;
+  background-color: var(--dark-color-3);
+}
+
+.dark-mode .manual-content {
+  background-color: var(--dark-color-3);
+  border-radius: 8px;
+}
+
+.dark-mode {
+  background-color: #2c2f33;
+}
+
+.dark-mode #correctButton {
+  background-color: var(--correct-color);
+  color: var(--text-color);
+}
+
+.dark-mode #wrongButton {
+  background-color: var(--wrong-color);
+  color: var(--text-color);
+}
+
+.dark-mode #resetButton {
+  background-color: var(--reset-color);
+  color: var(--text-color);
+}
+
+/* Dark Mode Success, Warning, and Exact classes */
+.dark-mode .success {
+  color: var(--correct-color);
+}
+
+.dark-mode .warning {
+  color: var(--wrong-color);
+}
+
+.dark-mode .exact-good,
+.dark-mode .exact-bad {
+  color: var(--exact-color);
+}
+
+/* Settings and manual container in Dark Mode */
+.dark-mode .settings-container,
+.dark-mode .manual-container,
+.dark-mode .container,
+.dark-mode .logo {
+  background-color: var(--dark-color-2);
+}
+
+.dark-mode .modal-content {
+  background-color: var(--dark-color-1);
+  color: #ffffff;
+}
+
+.btn.confirm {
+  background-color: var(--correct-color);
+  color: var(--text-color);
+}
+
+.btn.cancel {
+  background-color: var(--wrong-color);
+  color: var(--text-color);
+}
+
+.dark-mode .custom-checkbox input:checked ~ .checkmark {
+  background-color: var(--nitro-color);
+}
+
+.dark-mode .manual-toggle {
+  background-color: var(--nitro-color-dark);
 }
 
 /* Mobile styles */
