audio file and design update

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,30 +50,21 @@ body {
 }
 
 .btn {
+  transition: ease-in-out 0.15s;
   font-size: 18px;
   padding: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  /* transition: background-color 0.3s; */
   min-width: 150px;
   /* Set a fixed width for the buttons. */
   text-align: center;
-  /* Center the text within the buttons. */
 }
 
-#correctButton {
-  background-color: var(--correct-color);
-  color: var(--text-color);
-  height: 120px;
-  width: 120px;
-}
-
-#wrongButton {
-  background-color: var(--wrong-color);
-  color: var(--text-color);
-  height: 120px;
-  width: 120px;
+.btn:hover {
+  transform: translateY(-0.25rem) scale(1.01);
+  transition-duration: 0.2s;
 }
 
 #resetButton {
@@ -101,6 +92,23 @@ body {
   opacity: 0.8;
 }
 
+#wrongButton,
+#correctButton {
+  margin-top: 48px;
+  height: 120px;
+  width: 120px;
+}
+
+#wrongButton {
+  background-color: var(--wrong-color);
+  color: var(--text-color);
+}
+
+#correctButton {
+  background-color: var(--correct-color);
+  color: var(--text-color);
+}
+
 .center-content {
   display: flex;
   flex-direction: column;
@@ -112,6 +120,8 @@ body {
 .result {
   text-align: center;
   margin-top: 20px;
+  border: solid 2px #f9f9f9;
+  padding: 12px;
 }
 
 .logo {
@@ -391,6 +401,10 @@ body.dark-mode {
 
 .dark-mode hr {
   color: var(--dark-color-3);
+}
+
+.dark-mode .result {
+  border: solid 2px var(--dark-color-3);
 }
 
 /* Mobile styles */
