--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,9 @@ body {
   min-width: 150px;
   /* Set a fixed width for the buttons. */
   text-align: center;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .btn:hover {
@@ -99,6 +102,8 @@ body {
   height: 120px;
   width: 120px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+  border: none;
+  padding: 0xp;
 }
 
 #wrongButton {
