--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ body {
 
 #wrongButton,
 #correctButton {
-  margin-top: 48px;
+  margin-top: 24px;
   height: 120px;
   width: 120px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
@@ -171,6 +171,7 @@ body {
   text-align: center;
   border: solid 2px #f9f9f9;
   padding: 12px;
+  margin: 0px;
 }
 
 .logo {
