--- a/css/styles.css
+++ b/css/styles.css
@@ -39,10 +39,11 @@
 html,
 body {
   font-family: "Open Sans", "Times New Roman", Times, serif !important;
-  /* touch-action: manipulation !important;
+  touch-action: manipulation !important;
   -webkit-user-select: none;
   -ms-user-select: none;
-  user-select: none; */
+  user-select: none;
+  height: 100%;
 }
 
 :root {
@@ -159,6 +160,25 @@ body {
 #correctButton {
   background: radial-gradient(circle, var(--correct-color), #80e27e);
   color: var(--text-color);
+}
+
+.dark-mode #wrongButton {
+  background: radial-gradient(circle, var(--wrong-color-3), #992c2c);
+  color: var(--text-color);
+}
+
+.dark-mode #correctButton {
+  background: radial-gradient(circle, var(--correct-color), #4b8e79);
+  color: var(--text-color);
+}
+
+/* Dark Mode Success, Warning, and Exact classes */
+.dark-mode .success {
+  color: var(--correct-color);
+}
+
+.dark-mode .warning {
+  color: var(--wrong-color-3) !important;
 }
 
 #resetButton {
@@ -398,15 +418,6 @@ body.dark-mode {
 
 .dark-mode {
   background-color: #2c2f33;
-}
-
-/* Dark Mode Success, Warning, and Exact classes */
-.dark-mode .success {
-  color: var(--correct-color);
-}
-
-.dark-mode .warning {
-  color: var(--wrong-color);
 }
 
 .dark-mode .exact-good,
