--- a/css/styles.css
+++ b/css/styles.css
@@ -589,7 +589,7 @@ body.dark-mode {
   background: radial-gradient(circle, var(--correct-color), #4b8e79);
 }
 
-.jing-jing {
-  width: 200px;
-  height: 200px;
+.remove-element-animation {
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
 }
