--- a/css/styles.css
+++ b/css/styles.css
@@ -494,11 +494,24 @@ body.dark-mode {
 }
 
 .table-results-container {
-  max-height: 165px; /* 3.5 rows of 40px each, plus a little space in between */
+  max-height: 125px;
   width: 28vh;
   overflow-y: auto;
-  min-height: 165px; /* 3.5 rows x 30px each + 5px gaps = 125px */
+  /* min-height: 105px; */
   position: relative;
+}
+
+.table-results-time,
+.demo-row-time {
+  font-style: italic;
+  line-height: -1px;
+}
+
+.table-results-type,
+.table-results-time,
+.demo-row-type,
+.demo-row-time {
+  margin: 24px;
 }
 
 .table-results,
