--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ body {
   min-width: 150px;
   /* Set a fixed width for the buttons. */
   text-align: center;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .btn:active {
@@ -599,11 +600,11 @@ body.dark-mode {
 }
 
 .filter-mode-bad {
-  background: radial-gradient(circle, var(--wrong-color-3), #992c2c);
+  background: var(--wrong-color-3) !important;
 }
 
 .filter-mode-good {
-  background: radial-gradient(circle, var(--correct-color), #4b8e79);
+  background: var(--correct-color-3) !important;
 }
 
 .remove-element-animation {
