--- a/css/styles.css
+++ b/css/styles.css
@@ -519,6 +519,12 @@ body.dark-mode {
   width: 28vh;
   overflow-y: auto;
   position: relative;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.table-results-container::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .table-results-time {
@@ -593,7 +599,22 @@ body.dark-mode {
 }
 
 .filter-button {
-  margin-top: -32px;
+  width: 90%;
+  margin: auto;
+}
+
+.table-results-main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 16px;
+  border: solid 4px #f4f4f4;
+  padding: 24px;
+  border-radius: 12px;
+}
+
+.dark-mode .table-results-main-container {
+  border: solid 4px var(--dark-color-1);
 }
 
 .filter-mode-all {
